# JavaErlang

./: .gitignore  AUTHORS  Bugs  COPYING  INSTALL  INSTALLATION  Makefile  Makefile.in  NEWS  README  README.md  WISHLIST  configure  configure.ac  rebar.config
bininst/: INSTALLATION
c/: java_int_resource.c
c_src/: Makefile  java_int_resource.c  java_resource.c
doc/: README.md  edoc-info  java.md  java_erlang_app.md  java_erlang_install.md  java_erlang_sup.md  java_proxy.md  java_resource.md  java_to_erlang.md  overview.edoc
include/: README
java/: JavaErlang.java  Test2.java
java/javaErlang/: ErlangObjectKey.java  InvHandler.java  JavaErlang.java  JavaObjectEntry.java  JavaObjectKey.java  OtpStatusHandler.java  ProxyFactoryClass.java  ProxyHandler.java  ProxyInstanceFactory.java  RefEqualsObject.java  ThreadMsgHandler.java  design
java_src/: Makefile
java_src/javaErlang/: ErlangObjectKey.java  ErlangObjectRef.java  IntKey.java  JavaErlang.java  JavaObjectEntry.java  JavaObjectKey.java  OtpStatusHandler.java  ProxyFactoryClass.java  ProxyHandler.java  ProxyInstanceFactory.java  RefEqualsObject.java  Tags.java  (+1 more)
qc/: hashset_test.erl
scripts/: dorelease  mkrelease
src/: class.hrl  classinfo.hrl  debug.hrl  hashset_test.erl  java.erl  java_erlang.app.src  java_erlang_app.erl  java_erlang_install.erl  java_erlang_sup.erl  java_int_resource.erl  java_proxy.erl  java_resource.erl  java_to_erlang.erl  node.hrl  tags.hrl  tests.erl  translate_java_to_erlang.erl
tests/: gc_test.erl  hashset_test.erl  swing_hello_world.erl  swing_threaded_hello_world.erl
(+8 files in other folders)
